--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel=stylesheet type="text/css" href="index.css">
 </head>
 <body>
+  <div></div>
   <canvas id="canvas" class="sprite"></canvas>
 
   <script src="animation.js"></script>
