--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel=stylesheet type="text/css" href="index.css">
 </head>
 <body>
-  <div></div>
+  <div class="title">
+    <p>sprite-animation-canvas</p>
+  </div>
   <canvas id="canvas" class="sprite"></canvas>
 
   <script src="animation.js"></script>
